--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,56 @@
-$bgColor: red;
+@use 'hero';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+$corDeFundo: #040714;
+$corTextoPrincipal: silver;
+$corTextoSecundaria: #f9f9f9;
 
 body {
-    background-color: $bgColor;
+    background-color: $corDeFundo;
+}
+
+@mixin text($fontSize: 16px) {
+    font-size: $fontSize;
+    line-height: $fontSize + 10px;
+    color: $corTextoPrincipal;
+}
+
+@mixin title($fontSize: 40px){
+    @include text($fontSize);
+    color: $corTextoSecundaria;
+}
+
+.text--big {
+    @include text(18px);
+}
+
+.text {
+    @include text;
+}
+
+.text--small {
+    @include text(12px);
+}
+
+.link-text {
+    @include text(18px);
+    color: $corTextoSecundaria;
+    text-decoration: underline
+}
+
+.title--big {
+    @include text(44px);
+}
+
+.title {
+    @include text;
+}
+
+.title--small {
+    @include text(28px);
 }
